vpc.tf
resource "aws_vpc" "terraform_vpc" {
  cidr_block = "${var.vpc_cidr}"
  enable_dns_hostnames = true
  tags {
    Name = "aws-vpc-terraform"
  }
}
